# limit-reader

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs
testdata/: hello.txt
