[package]
name = "limit-reader"
version = "0.1.1"
edition = "2021"
authors = ["fzdwx"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fzdwx/limit-reader"
description = "A simple reader that limits the number of bytes read from an underlying reader."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
